# libaacs

./: .gitignore  CMakeLists.txt
cmake/: config.h
src/file/: dirs_win32.c  file_win32.c  keydbcfg-parser.y  mmc_device_win32.c
src/libaacs/: ec.c
